--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <title></title>
   <meta charset="utf-8">
-  <meta discription="">
+  <meta description="">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
   <link href="css/bootstrap.min.css" rel="stylesheet">
   <link href="https://use.fontawesome.com/releases/v5.0.6/css/all.css" rel="stylesheet">
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+  <div id="page-top">
+    <a href="#"></a>
+  </div>
   <nav class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top content-width">
     <span class="navbar-brand mr-auto navbar-brand-center">How Much 和牛</span>
     <ul class="navbar-nav">
@@ -31,7 +34,7 @@
       <a href="#" class="card">
         <img class="card-img-top" src="img/ph_beaf.jpg">
         <div class="card-body">
-          <h5 class="card-title">和牛</h5>
+          <h5 class="card-title">松坂牛</h5>
           <table>
             <tr>
               <td>原産地： </td>
@@ -50,7 +53,26 @@
       <a href="#" class="card">
         <img class="card-img-top" src="img/ph_beaf.jpg">
         <div class="card-body">
-          <h5 class="card-title">和牛</h5>
+          <h5 class="card-title">神戸ビーフ</h5>
+          <table>
+            <tr>
+              <td>原産地： </td>
+              <td>岐阜県</td>
+            </tr>
+            <tr>
+              <td>値段： </td>
+              <td>8000 円 / kg</td>
+            </tr>
+          </table>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">この和牛の詳細を見る</small>
+        </div>
+      </a>
+      <a href="#" class="card">
+        <img class="card-img-top" src="img/ph_beaf.jpg">
+        <div class="card-body">
+          <h5 class="card-title">飛騨牛</h5>
           <table>
             <tr>
               <td>原産地： </td>
@@ -87,6 +109,25 @@
       </a>
     </div>
     <div class="card-deck row">
+      <a href="#" class="card">
+        <img class="card-img-top" src="img/ph_beaf.jpg">
+        <div class="card-body">
+          <h5 class="card-title">和牛</h5>
+          <table>
+            <tr>
+              <td>原産地： </td>
+              <td>岐阜県</td>
+            </tr>
+            <tr>
+              <td>値段： </td>
+              <td>8000 円 / kg</td>
+            </tr>
+          </table>
+        </div>
+        <div class="card-footer">
+          <small class="text-muted">この和牛の詳細を見る</small>
+        </div>
+      </a>
       <a href="#" class="card">
         <img class="card-img-top" src="img/ph_beaf.jpg">
         <div class="card-body">
